k8s/asgard/apps/n8n/namespace.yaml
# k8s/asgard/apps/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
